# bidsgnostic

./: .codespellrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .snakebids  CITATION.cff  Dockerfile  Makefile  README.md  README.rst  pipeline_description.json  pyproject.toml  requirements_doc.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: codespell.yml  package.yml  validate_cff.yml  validation.yml
bar/config/: snakebids.yml
bidsgnostic/: _version.py  group.py  run.py  utils.py  visualize.py
config/: snakebids.yml
docs/: conf.py  index.rst
docs/getting_started/: example.rst  installation.rst
docs/images/: dataset-balloonanalogrisktakingtask_splitby-suffix_summary.html  sub-01_task-balloonanalogrisktask_run-01_events.html
docs/usage/: app_cli.rst  snakemake_cli.rst
tests/: smoke_test.py
tests/data/: bidsgnostic_event_all_examples.sh  bidsgnostic_layout_all_examples.sh  run_command_on_all_repo.py  run_command_on_all_repo.sh
tests/data/ds001/: README  task-balloonanalogrisktask_bold.json
workflow/: Snakefile
workflow/scripts/: add_top_files.py  ds_desc.py  license.py  plot_events.py  plot_layout.py  readme.py  write_ds_desc.py
