[metadata]
name = bidsgnostic
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
platforms = OS Independent

[options]
packages = find:
include_package_data = True

[codespell]
skip = ./.git,_version.py

[flake8]
max-line-length = 100
count = True
show-source = True
statistics = True
exclude =
    *build
    .git
    __pycache__
    _version.py
max-complexity = 10
per-file-ignores =
    workflow/scripts/*:F821

[mypy]
exclude = ['tests/']
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-bidsgnostic._version]
ignore_errors = True
